--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hooks_riverpod: ^2.3.6
+  openai_api: ^0.0.7+2
+  envied: ^0.3.0+3
+  logger: ^1.4.0
+  uuid: ^3.0.7
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
+  markdown_widget: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +54,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  custom_lint: ^0.4.0
+  riverpod_lint: ^1.3.2
+  envied_generator: ^0.3.0+3
+  build_runner: ^2.3.3
+  freezed: ^2.4.0
+  json_serializable: ^6.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
