--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   markdown_widget: ^2.2.0
+  flutter_math_fork: ^0.6.3+1
+  markdown: ^7.1.0
+  floor: ^1.4.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.4.0
   json_serializable: ^6.6.2
+  floor_generator: ^1.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
