--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_math_fork: ^0.6.3+1
   markdown: ^7.1.0
   floor: ^1.4.2
+  riverpod_annotation: ^2.1.1
+  go_router: ^9.0.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ dev_dependencies:
   freezed: ^2.4.0
   json_serializable: ^6.6.2
   floor_generator: ^1.4.2
+  riverpod_generator: ^2.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
