--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         
         {
             "name": "juejin_chat_demo",
@@ -23,4 +24,4 @@
             "flutterMode": "release"
         }
     ]
-}
+}pod update
