--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   floor: ^1.4.2
   riverpod_annotation: ^2.1.1
   go_router: ^9.0.3
+  flutter_tiktoken: ^0.0.1
+  record: ^4.4.4
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +81,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
